HFP-2181 Fix buttons not visible when tutorial missing

--- a/styles/scss/_copy-paste.scss
+++ b/styles/scss/_copy-paste.scss
@@ -1,5 +1,12 @@
 .h5peditor-copypaste-wrap {
   float: right;
+  margin-bottom: 14px;
+}
+.h5peditor-copypaste-wrap.hidden {
+  display: none;
+}
+.h5peditor-clearfix {
+  clear: both;
 }
 
 .h5peditor-paste-button,
